# mcp-server-mechafil

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  UNIFIED_DEPLOYMENT_GUIDE.md  codes_examples.md  fix-rbp-unit.md  fly.toml  mcp-gaps-assessment.md  pyproject.toml  server.py  start_mcp.sh  system-prompt.md  system-prompt.txt
.github/workflows/: sdk-contract-tests.yml
documentation-and-instructions/: api_instructions.md  examples.md  examples.txt  filecoin-context.md  filecoin-context.txt  filecoin.md  instructions.md  mcp-documentation.md  mcp-tools-context.md  mcp-tools-context.txt  mechafil_server.md  role-and-instructions.md  role-and-instructions.txt  user-queries-management.md  user-queries-management.txt
documentation-deprecated/: api_instructions.md  mcp-documentation.md  mechafil_explanation.md  mechafil_inputs.md  mechafil_outputs.md  mechafil_server.md
sdk/: README.md  econolens-sdk-plan.md  run-contract-tests.sh
sdk/js/econolens-client/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
sdk/js/econolens-client/__tests__/: contract.test.ts
sdk/js/econolens-client/examples/: simple.js
sdk/js/econolens-client/src/: index.ts
sdk/python/: README.md  pyproject.toml  setup.cfg
sdk/python/econolens_client/: __init__.py  client.py
sdk/python/examples/: simple.py
sdk/python/tests/: contract_test.py
