[project]
name = "mcp-server-mechafil"
version = "0.1.0"
description = "MCP server for mechafil-server API endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.11.9",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
