[project]
name = "econolens-client"
version = "0.1.0"
description = "Econolens MCP client (Python)"
authors = [{name = "CryptoEconLab"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
