[metadata]
name = econolens-client
version = 0.1.0
description = Econolens MCP client (Python)
long_description = file: README.md
long_description_content_type = text/markdown
author = CryptoEconLab

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.31

[options.extras_require]
dev =
    pytest>=7.4

[options.packages.find]
where = .
